--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "coffee -m -o dist -c src",
     "watch": "coffee -mw -o dist -c src",
-    "build-tests": "coffee -o test -c test && pug test && cd test && for /d %i in (*) do @cd %i && npx webpack --mode production && cd ..",
+    "build-tests": "coffee -o test -c test && pug test && cd test && for /d %i in (*) do @cd %i && npx webpack --mode development && cd ..",
     "test": "coffee -o test -c test && pug test && nodeunit test/test.js"
   },
   "repository": {
