big renderer update

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "yma-core",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "coffee -m -o dist -c src",
     "watch": "coffee -mw -o dist -c src",
     "build-tests": "coffee -o test -c test && pug test && cd test && for /d %i in (*) do @cd %i && npx webpack --mode development && cd ..",
-    "test": "coffee -o test -c test && pug test && nodeunit test/test.js"
+    "test": "npm run build && npm run build-tests && nodeunit test/test.js"
   },
   "repository": {
     "type": "git",
