--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "coffee -m -o dist -c src",
     "watch": "coffee -mw -o dist -c src",
     "build-tests": "coffee -o test -c test && pug test && cd test && for /d %i in (*) do @cd %i && npx webpack --mode development && cd ..",
-    "test": "npm run build && npm run build-tests && nodeunit test/test.js"
+    "full-test": "npm run build && npm run build-tests && nodeunit test/test.js",
+    "test": "nodeunit test/test.js"
   },
   "repository": {
     "type": "git",
